// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabIcon should render correctly 1`] = `
<View
  style={
    [
      {
        "display": "flex",
      },
      {
        "marginLeft": -4,
        "marginTop": -4,
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "center",
      },
      {
        "minWidth": 40,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito-Medium",
        },
        {
          "color": "#ffffff",
        },
        {
          "fontSize": 12,
          "lineHeight": 16,
        },
        [
          {
            "marginLeft": 4,
            "marginTop": 4,
          },
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;

exports[`TabIcon should render when is focused 1`] = `
<View
  style={
    [
      {
        "display": "flex",
      },
      {
        "marginLeft": -4,
        "marginTop": -4,
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "center",
      },
      {
        "minWidth": 40,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Nunito-Bold",
        },
        {
          "color": "#6bc0eb",
        },
        {
          "fontSize": 12,
          "lineHeight": 16,
        },
        [
          {
            "marginLeft": 4,
            "marginTop": 4,
          },
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;
